--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,16 +1,16 @@
 {
-  "name": "Hotel Management System",
-  "short_name": "Hotel Manager",
-  "description": "Sistema de gestión hotelera completo",
-  "start_url": "/",
-  "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#1f2937",
+  "short_name": "Hotel Paraíso",
+  "name": "Hotel Paraíso - Sistema de Gestión",
   "icons": [
     {
-      "src": "/favicon.ico",
+      "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
-  ]
+  ],
+  "start_url": ".",
+  "display": "standalone",
+  "theme_color": "#2563eb",
+  "background_color": "#ffffff",
+  "description": "Sistema de gestión hotelera para Hotel Paraíso"
 }
